2010-04-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `fcntl'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `fcntl'.
	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove fcntl.h.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore <siginfo.h>.

	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove siginfo.h.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore unused <ucontext.h>.

	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove ucontext.h.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Tidy up configure.ac a bit.

	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove unistd.h.
	(rcs_cv_wac_ok, rcs_cv_tolerant_wait): Untabify C fragments.
	(rcs_slsl_is_sl): Rename shell var from `rcs_cv_slsl_is_sl'.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove now-obsolete
	`ac_cv_header_stdlib_h', `ac_cv_header_string_h'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `dirent'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `dirent'.
	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove dirent.h.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume `siginfo_t' has member `si_errno'.

	* configure.ac (HAVE_SI_ERRNO): Delete AC_DEFINE,
	surrounding AC_CHECK_MEMBER, and surrounding condition.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use gnulib module `sig2str'; push `psignal' cppcond down.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `sig2str'.
	* configure.ac (AC_CHECK_FUNCS_ONCE):
	Add `strsignal'; remove `sys_siglist'.
	(rcs_have_psignal_or_strsignal): New shell var.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove `ac_cv_func_psignal',
	`ac_cv_func_sys_siglist'; add `rcs_have_psignal_or_strsignal'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `double-slash-root'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `double-slash-root'.
	* configure.ac (rcs_cv_slsl_is_sl): Convert from
	AC_CACHE_CHECK to simple comparison conditional assignment.