@@ -208,7 +208,7 @@ gl_INIT
 AC_CHECK_HEADERS_ONCE([
   limits.h mach/mach.h net/errno.h
   pwd.h
-  sys/mman.h sys/wait.h utime.h
+  sys/mman.h utime.h
 ])
 
 # types -- see also: (info "(autoconf) Particular Types")
